--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -173,9 +173,9 @@
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Facturas</span>
           </a> 
-          <a class="nav-link" href="{% url 'indexDetalleUtilidades' %}" select>
+          <a class="nav-link" href="{% url 'indexInformes' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
-            <span>Detalle de Utilidades</span>
+            <span>Informes</span>
           </a> 
         </div>
       </li>
