--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -34,7 +34,6 @@
       background-color: #262626;
       padding-left: 8px;
     }
-
   </style>
 
 
@@ -59,7 +58,8 @@
     <!-- Navbar -->
     <ul class="navbar-nav ml-auto ml-md-0">
       <li class="nav-item dropdown no-arrow mx-1">
-        <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-bell fa-fw"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown">
@@ -70,7 +70,8 @@
         </div>
       </li>
       <li class="nav-item dropdown no-arrow mx-1">
-        <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-envelope fa-fw"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="messagesDropdown">
@@ -84,7 +85,7 @@
         <a class="nav-link " href="{% url 'logout' %}" id="userDropdown" role="button">
           <i class="fas fa-user-circle fa-fw"></i>
           {% if user.is_authenticated %}
-            Cerrar sesión
+          Cerrar sesión
           {% endif %}
         </a>
       </li>
@@ -96,17 +97,18 @@
 
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
-     
+
       <li class="nav-item">
         <a class="nav-link" href="{% url 'dashboard' %}">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Dashboard</span></a>
       </li>
-      
+
 
       <li class="nav-item dropdown">
         {% if perms.app.add_estadousuario %}
-        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-fw fa-user"></i>
           <span>Administración</span>
         </a>
@@ -114,46 +116,47 @@
           <a class="nav-link" href="{% url 'indexUser' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Usuarios</span>
-          </a> 
+          </a>
           <a class="nav-link" href="{% url 'indexProveedores' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Proveedores</span>
-          </a> 
+          </a>
           <a class="nav-link" href="{% url 'indexMenus' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Menus</span>
-          </a> 
+          </a>
           <a class="nav-link" href="{% url 'indexInsumos' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Insumos</span>
-          </a> 
+          </a>
           <a class="nav-link" href="{% url 'indexProductos' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Productos</span>
-          </a> 
+          </a>
           <a class="nav-link" href="{% url 'indexRecetas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Recetas</span>
-          </a> 
+          </a>
           <a class="nav-link" href="{% url 'indexMesas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Mesas</span>
-          </a> 
+          </a>
           <a class="nav-link" href="{% url 'indexPedidosProveedor' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Pedidos Proveedores</span>
-          </a> 
+          </a>
           <a class="nav-link" href="{% url 'indexGestionCajas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Cajas</span>
-          </a> 
+          </a>
         </div>
         {% endif %}
       </li>
 
       <li class="nav-item dropdown">
         {% if perms.app.add_insumo %}
-        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-fw fa-user"></i>
           <span>Bodega</span>
         </a>
@@ -161,14 +164,15 @@
           <a class="nav-link" href="{% url 'indexStockProductos' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Stock de Insumos</span>
-          </a> 
+          </a>
         </div>
         {% endif %}
       </li>
 
       <li class="nav-item dropdown">
         {% if perms.app.add_caja %}
-        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-fw fa-user"></i>
           <span>Finanzas</span>
         </a>
@@ -176,22 +180,23 @@
           <a class="nav-link" href="{% url 'indexGestionCajaFinanzas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Gestion de Caja</span>
-          </a> 
+          </a>
           <a class="nav-link" href="{% url 'indexGestionFacturas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Facturas</span>
-          </a> 
+          </a>
           <a class="nav-link" href="{% url 'indexInformes' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Informes</span>
-          </a> 
+          </a>
         </div>
         {% endif %}
       </li>
 
       <li class="nav-item dropdown">
         {% if perms.app.add_mesa %}
-        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-fw fa-user"></i>
           <span>Caja</span>
         </a>
@@ -199,14 +204,15 @@
           <a class="nav-link" href="{% url 'indexPagoEfectivo' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Pago Efectivo</span>
-          </a>  
+          </a>
         </div>
         {% endif %}
       </li>
 
       <li class="nav-item dropdown">
         {% if perms.app.add_detalleorden %}
-        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-fw fa-user"></i>
           <span>Cocina</span>
         </a>
@@ -214,11 +220,11 @@
           <a class="nav-link" href="{% url 'indexTablero' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Tablero</span>
-          </a>  
+          </a>
         </div>
         {% endif %}
       </li>
-      
+
 
     </ul>
     <!-- /.content-wrapper -->
@@ -227,7 +233,7 @@
     <!-- /#wrapper -->
   </div>
 
-  <footer>  
+  <footer>
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
       <a class="navbar-brand mr-1" href="index.html">Siglo XXI</a>
       <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
@@ -238,11 +244,11 @@
       </form>
       <ul class="navbar-nav ml-auto ml-md-0">
       </ul>
-      </nav>
+    </nav>
   </footer>
 
 
-  <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
@@ -268,49 +274,50 @@
 
   <script src="{% static 'js/bootstrap-table.min.js' %}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-es-CL.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/extensions/cookie/bootstrap-table-cookie.min.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/extensions/cookie/bootstrap-table-cookie.min.js"></script>
 
 
   {% if messages %}
-      {% for m in messages %}
-        <script>
-          swal.fire({
-            "title": "Felicitaciones",
-            "text": "{{m}}",
-            "icon": "success",
-            "showConfirmButton": false,
-            "timer": 2500
-          })
-        </script>
-      {% endfor %}
-    {% endif %}
-    <script>
-      /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
-      var dropdown = document.getElementsByClassName("dropdown-btn");
-      var i;
-      
-      for (i = 0; i < dropdown.length; i++) {
-        dropdown[i].addEventListener("click", function() {
+  {% for m in messages %}
+  <script>
+    swal.fire({
+      "title": "Felicitaciones",
+      "text": "{{m}}",
+      "icon": "success",
+      "showConfirmButton": false,
+      "timer": 2500
+    })
+  </script>
+  {% endfor %}
+  {% endif %}
+  <script>
+    /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+    var dropdown = document.getElementsByClassName("dropdown-btn");
+    var i;
+
+    for (i = 0; i < dropdown.length; i++) {
+      dropdown[i].addEventListener("click", function () {
         this.classList.toggle("active");
         var dropdownContent = this.nextElementSibling;
         if (dropdownContent.style.display === "block") {
-        dropdownContent.style.display = "none";
+          dropdownContent.style.display = "none";
         } else {
-        dropdownContent.style.display = "block";
+          dropdownContent.style.display = "block";
         }
-        });
-      }
+      });
+    }
 
-      
-    </script>
 
-   
+  </script>
 
-    
-    
 
-    {% block js %}
-    {% endblock %}
+
+
+
+
+  {% block js %}
+  {% endblock %}
 
 </body>
 
