--- a/app/templates/app/administrador/pedidos-proveedor/indexPedidosProveedor.html
+++ b/app/templates/app/administrador/pedidos-proveedor/indexPedidosProveedor.html
@@ -18,45 +18,28 @@
     <thead class="thead-dark">
       <tr>
         <!-- <th scope="col">#</th> -->
-        <th scope="col">Producto</th>
-        <th scope="col">Cantidad solicitada</th>
+        <th scope="col">N° Pedido</th>
+        <th scope="col">Fecha Pedido</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Proveedor</th>
+        <th scope="col">Usuario</th>
         <th scope="col">Acciónes</th>
       </tr>
     </thead>
     <tbody>
-      <!-- {% for p in PedidosProveedores %} -->
-      <!-- <tr> -->
-        <!-- <th scope="row">{{ u.id }}</th> -->
-        <!-- <td>{{p.precio}}</td> -->
-        <!-- <td>{{p.id_cat_producto}}</td> -->
-        <!-- <td class="p-1"> -->
-          <!-- <a href="{% url 'modificarProductos' p.id_producto %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a> -->
-          <!-- <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a> -->
-        <!-- </td> -->
-      <!-- </tr> -->
-      <!-- {% endfor %} -->
+      {% for p in PedidosNuevos %}
       <tr>
-        <!-- <th scope="row">{{ u.id }}</th> -->
-        <td>Tomate</td>
-        <td>70</td>
+        <td>{{p.1}}</td>
+        <td>{{p.2}}</td>
+        <td>{{p.4}}</td>
+        <td>{{p.6}}</td>
+        <td>{{p.8}}</td>
         <td class="p-1">
           <!-- <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a> -->
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa"> Generar OC</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa"> Autorizar Pedido</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Rechazar Pedido</i></a>
+          <a href="{% url 'detallePedidosProveedor' p.0 %}" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-eye mr-2"> Detalle</i></a>
         </td>
       </tr>
-      <tr>
-        <!-- <th scope="row">{{ u.id }}</th> -->
-        <td>Papa</td>
-        <td>40</td>
-        <td class="p-1">
-          <!-- <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a> -->
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa"> Generar OC</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa"> Autorizar Pedido</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Rechazar Pedido</i></a>
-        </td>
-      </tr>
+      {% endfor %}
     </tbody>
   </table>
 </div>
