--- a/app/templates/app/administrador/pedidos-proveedor/indexPedidosProveedor.html
+++ b/app/templates/app/administrador/pedidos-proveedor/indexPedidosProveedor.html
@@ -36,6 +36,7 @@
         <td>{{p.8}}</td>
         <td class="p-1">
           <!-- <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a> -->
+          <a href="{% url 'registrarOrdenCompra' p.0 %}" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-eye mr-2"> Generar OC</i></a>
           <a href="{% url 'detallePedidosProveedor' p.0 %}" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-eye mr-2"> Detalle</i></a>
         </td>
       </tr>
