--- a/app/templates/app/administrador/menus/editarMenus.html
+++ b/app/templates/app/administrador/menus/editarMenus.html
@@ -21,7 +21,7 @@
               <input type="hidden" name="id" value="{{m.0}}">
               <div class="form-group col-md-6">
                 <label for="p_nro_menu">Nro° Menu:</label>
-                <input type="text" name="p_nro_menu" class="form-control" value="{{m.1}}" required>
+                <input type="number" name="p_nro_menu" class="form-control" value="{{m.1}}" required>
               </div>
               <div class="form-group col-md-6">
                 <label for="p_nom_menu" >Nombre:</label>
