--- a/app/templates/app/administrador/menus/editarMenusProductos.html
+++ b/app/templates/app/administrador/menus/editarMenusProductos.html
@@ -28,7 +28,7 @@
               </div>
               <div class="form-group col-md-12">
                 <label for="p_descripcion" >Descripcion:</label>
-                <textarea name="p_descripcion" id="" class="form-control" cols="30" rows="5">{{m.7}}</textarea>
+                <textarea name="p_descripcion" id="" class="form-control" cols="30" rows="5" required>{{m.7}}</textarea>
               </div>
           </div>
         </div>
