--- a/app/templates/app/administrador/menus/registroMenus.html
+++ b/app/templates/app/administrador/menus/registroMenus.html
@@ -17,7 +17,7 @@
           <div class="row">
             <div class="form-group col-md-6">
               <label for="p_nro_menu">Nro° Menu:</label>
-              <input type="text" name="p_nro_menu" class="form-control" required>
+              <input type="number" name="p_nro_menu" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_nom_menu" >Nombre:</label>
