--- a/app/templates/app/administrador/menus/registroMenusProductos.html
+++ b/app/templates/app/administrador/menus/registroMenusProductos.html
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group col-md-12">
               <label for="p_descripcion" >Descripcion:</label>
-              <textarea name="p_descripcion" id="" class="form-control" cols="30" rows="5"></textarea>
+              <textarea name="p_descripcion" id="" class="form-control" cols="30" rows="5" required></textarea>
             </div>
           </div>
         </div>
