--- a/app/templates/app/administrador/recetas/editarRecetas.html
+++ b/app/templates/app/administrador/recetas/editarRecetas.html
@@ -30,7 +30,7 @@
           </div>
           <div class="form-group col-md-12">
             <label for="p_instrucciones">Instrucciones:</label>
-            <textarea class="form-control" name="p_instrucciones" id="" cols="30" rows="10">{{r.6}}</textarea>
+            <textarea class="form-control" name="p_instrucciones" id="" cols="30" rows="10" required>{{r.6}}</textarea>
           </div>
         </div>
       </div>
