--- a/app/templates/app/administrador/recetas/registroRecetas.html
+++ b/app/templates/app/administrador/recetas/registroRecetas.html
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group col-md-12">
               <label for="p_instrucciones">Instrucciones:</label>
-              <textarea class="form-control" name="p_instrucciones" id="" cols="30" rows="10"></textarea>
+              <textarea class="form-control" name="p_instrucciones" id="" cols="30" rows="10" required></textarea>
             </div>
           </div>
         </div>
