--- a/app/templates/app/bodega/stock-productos/editarStockProductos.html
+++ b/app/templates/app/bodega/stock-productos/editarStockProductos.html
@@ -3,90 +3,31 @@
   
 {% block js %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script>
-    $(document).ready(function() {
-      let FIRST_NAME = $("#id_first_name").val();
-      let LAST_NAME = $("#id_last_name").val();
-      let EMAIL = $("#id_email").val();
-      
-      $('#id_username').prop('readonly', true);
-      $('#id_first_name').prop('required', true);
-      $('#id_last_name').prop('required', true);
-
-      var minLength = 3;
-
-      $("#id_first_name").on("blur", function(){
-        var value = $(this).val();
-        if (value.length < minLength) {
-          $("#id_first_name").val(FIRST_NAME);
-
-          Swal.fire({
-            position: 'center',
-            icon: 'warning',
-            title: 'El nombre debe tener mínimo 3 carácteres',
-            showConfirmButton: false,
-            timer: 1500
-          })
-        }
-      });
-
-      $("#id_last_name").on("blur", function(){
-        var value = $(this).val();
-        if (value.length < minLength) {
-          $("#id_last_name").val(LAST_NAME);
-    
-          Swal.fire({
-            position: 'center',
-            icon: 'warning',
-            title: 'El apellido debe tener mínimo 3 carácteres',
-            showConfirmButton: false,
-            timer: 1500
-          })
-        }
-      });
-
-      $("#id_email").on("blur", function(){
-        var value = $(this).val();
-        if (value.length < (minLength + 5)) {
-          $("#id_email").val(EMAIL);
-    
-          Swal.fire({
-            position: 'center',
-            icon: 'warning',
-            title: 'El email debe tener mínimo 8 carácteres',
-            showConfirmButton: false,
-            timer: 1500
-          })
-        }
-      });
-    });
-
-    
-  </script>
 {% endblock %}
 
 {% block contenido %}
 {% load static %}
-    <!-- /.content-wrapper -->
-    
-    {% load crispy_forms_tags %}
-    <div id="register" class="col-lg-6 col-sm-9 mt-5 mx-1 d-block mx-auto" style="text-align:center;">
-      <form action="" method="post">
-        <h2>Editar proveedor</h2>
-        <hr>
-        {% csrf_token %}
-        {{ form | crispy }}
-        <div class="col">
-          <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexProveedores' %}" style="color: white;">Cancelar</a>
-            </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Editar</button>
+
+  <div id="register" class="col-lg-6 col-sm-9 mt-5 mx-1 d-block mx-auto" style="text-align:center;">
+    <form action="" method="post">
+      <h2>Editar Stock de Insumo</h2>
+      <hr>
+      <div class="col mt-4">
+        <div class="row">
+          <!-- id -->
+          <input type="hidden" name="p_id_producto" value="{{i.0}}">
+          <div class="form-group col-md-6">
+            <label for="p_nom_prod">Nombre:</label>
+            <input type="text" name="p_nom_prod" class="form-control" value="{{i.1}}" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="p_precio">Precio:</label>
+            <input type="number" name="p_precio" id="" class="form-control" value="{{i.2}}" required>
           </div>
         </div>
-      </form>
-    </div>
-  <!-- /#wrapper -->
+      </div>
+    </form>
+  </div>
 
   <style>
     #user-table{
