--- a/app/templates/app/finanzas/cajas/indexGestionCajaFinanzas.html
+++ b/app/templates/app/finanzas/cajas/indexGestionCajaFinanzas.html
@@ -9,7 +9,6 @@
   <h2>Gestion Caja Finanzas</h2>
 
   <div id="toolbar">
-    <!-- <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroGestionFacturas' %}" style="color: white; text-decoration: none;">Ingresar Factura</a></button> -->
   </div>
   <table id="table" class="table table-striped table-bordered" style="width: 100%;"
   data-toggle="table"
@@ -19,19 +18,23 @@
     <thead class="thead-dark">
       <tr>
         <!-- <th scope="col">#</th> -->
-        <th scope="col">N° de caja</th>
-        <th scope="col">Estado de caja</th>
+        <th scope="col">N° de Caja</th>
+        <th scope="col">Fecha de Creacion</th>
+        <th scope="col">Estado de Caja</th>
+        <th scope="col">Usuario Asignado</th>
         <th scope="col">Acciónes</th>
       </tr>
     </thead>
     <tbody>
       {% for c in Cajas %}
       <tr>
-        <!-- <th scope="row">{{ u.id }}</th> -->
-        <td>{{c.id_nro_caja}}</td>
-        <td>{{c.id_est_caja}}</td>
+        <td>{{c.1}}</td>
+        <td>{{c.2}}</td>
+        <td>{{c.4}}</td>
+        <td>{{c.6}}</td>
         <td class="p-1">
-          <a href="" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Detalle</i></a>
+          <a href="{% url 'buscarCajasFinanzas' c.0 %}" class="btn btn-success" style="font-size: 14px;"> Abrir Caja</i></a>
+          <a href="{% url 'detalleCajasFinanzas' c.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-eye"> Detalle</i></a>
         </td>
       </tr>
       {% endfor %}
