--- a/app/templates/app/finanzas/cajas/detalleCajas.html
+++ b/app/templates/app/finanzas/cajas/detalleCajas.html
@@ -33,15 +33,16 @@
           </div>
         </div>
       </div>
-    {% endfor %}
-    <div class="col mt-4">
+      <div class="col mt-4">
         <div class="row">
           <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexGestionCajaFinanzas' %}">
             Volver
           </a>
+          <a class="btn btn-danger d-flex ml-auto" href="{% url 'cuadrarCajasFinanzas' c.0 %}" type="submit">Cerrar Caja O Cuadrar ?</a>
         </div>  
       </div>
-  </div>
+      {% endfor %}
+    </div>
 
 
   <style>
