--- a/app/templates/app/cliente/clienteMenu.html
+++ b/app/templates/app/cliente/clienteMenu.html
@@ -15,7 +15,7 @@
         <div class="cartaMenu">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="p_id_producto" id="inlineRadio1" value="{{ltd.0}}" required>
-                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} ${{ltd.2}}</label>
+                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} <br/> ${{ltd.2}}</label>
             </div>
             <img src="{{ ltd.9 }}" alt="Plato 1">
             <div class="descripcion">
@@ -33,7 +33,7 @@
         <div class="cartaMenu">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="p_id_producto" id="inlineRadio1" value="{{ltd.0}}" required>
-                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} ${{ltd.2}}</label>
+                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} <br/> ${{ltd.2}}</label>
             </div>
             <img src="{{ ltd.9 }}" alt="Plato 1">
             <div class="descripcion">
@@ -51,7 +51,7 @@
         <div class="cartaMenu">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="p_id_producto" id="inlineRadio1" value="{{ltd.0}}" required>
-                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} ${{ltd.2}}</label>
+                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} <br/> ${{ltd.2}}</label>
             </div>
             <img src="{{ ltd.9 }}" alt="Plato 1">
             <div class="descripcion">
@@ -69,7 +69,7 @@
         <div class="cartaMenu">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="p_id_producto" id="inlineRadio1" value="{{ltd.0}}" required>
-                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} ${{ltd.2}}</label>
+                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} <br/> ${{ltd.2}}</label>
             </div>
             <img src="{{ ltd.9 }}" alt="Plato 1">
             <div class="descripcion">
@@ -87,7 +87,7 @@
         <div class="cartaMenu">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="p_id_producto" id="inlineRadio1" value="{{ltd.0}}" required>
-                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} ${{ltd.2}}</label>
+                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} <br/> ${{ltd.2}}</label>
             </div>
             <img src="{{ ltd.9 }}" alt="Plato 1">
             <div class="descripcion">
@@ -100,12 +100,12 @@
         {% endfor %}
         <h3> Postres :</h3>
         <hr>
-        {% for ltd in Postre %}
+        {% for ltd in listarProducto %}
         {% if ltd.4 == 'Postre' %}
         <div class="cartaMenu">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="p_id_producto" id="inlineRadio1" value="{{ltd.0}}" required>
-                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} ${{ltd.2}}</label>
+                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} <br/> ${{ltd.2}}</label>
             </div>
             <img src="{{ ltd.9 }}" alt="Plato 1">
             <div class="descripcion">
